Code coverage GA

--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .",
+    "coverage": "ng test --no-watch --code-coverage --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
