--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           path: ${{ github.workspace }}/alcs-frontend/coverage
           retention-days: 1
   coverage:
-    needs: [test]
+    needs: [test-frontend]
     name: coverage
     runs-on: ubuntu-latest
     steps:
