--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-fastify": "^9.0.3",
     "@nestjs/swagger": "^6.0.3",
     "@nestjs/typeorm": "^9.0.0",
+    "config": "^3.3.7",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
