Setup LCOV in Package file

--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -77,6 +77,14 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coverageReporters": [
+      [
+        "lcov",
+        {
+          "projectRoot": "../"
+        }
+      ]
+    ]
   }
 }
