Remove prefix flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
         with:
           coverageLocations: |
             ${{ github.workspace }}/**/lcov.info:lcov
-          prefix: ${{ github.workplace }}
+          #prefix: ${{ github.workplace }}
