--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ on:
     # tags:
     #   - "!*" # Do not execute on tags
     # paths:
-    #   - alcs-frontend/src/*
-    #   - alcs-frontend/test/*
-    #   - "alcs-frontend/*.json"
+    #   - alcs-*/src/*
+    #   - alcs-*/test/*
+    #   - "alcs-*/*.json"
   pull_request:
     paths:
       - "!*.MD"
@@ -18,8 +18,8 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest]
-        node: ["16.x"]
-    name: test/node ${{ matrix.node }}/${{ matrix.platform }}
+        node: ["16"]
+    name: Frontend Tests - ${{ matrix.node }}/${{ matrix.platform }}
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@master
@@ -29,7 +29,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run coverage
-      - if: matrix.node-version == '16.x'
+      - if: matrix.node == '16'
         uses: actions/upload-artifact@v3
         with:
           name: coverage-frontend
@@ -43,8 +43,8 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest]
-        node: ["16.x"]
-    name: test/node ${{ matrix.node }}/${{ matrix.platform }}
+        node: ["16"]
+    name: Frontend Tests - ${{ matrix.node }}/${{ matrix.platform }}
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@master
@@ -54,7 +54,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run test:cov
-      - if: matrix.node-version == '16.x'
+      - if: matrix.node == '16'
         uses: actions/upload-artifact@v3
         with:
           name: coverage-api
@@ -75,4 +75,4 @@ jobs:
         with:
           coverageLocations: |
             ${{ github.workspace }}/**/lcov.info:lcov
-          #prefix: ${{ github.workplace }}
+          prefix: ${{ github.workplace }}
