Only run on changes to application files (or PR)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
 name: CI
 on:
   push:
-    # tags:
-    #   - "!*" # Do not execute on tags
-    # paths:
-    #   - alcs-*/src/*
-    #   - alcs-*/test/*
-    #   - "alcs-*/*.json"
+    tags:
+      - "!*" # Do not execute on tags
+    paths:
+      - alcs-*/src/*
+      - alcs-*/test/*
+      - "alcs-*/*.json"
   pull_request:
     paths:
       - "!*.MD"
