--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -7,8 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "npx prettier --write .",
-    "coverage": "ng test --no-watch --code-coverage --browsers=ChromeHeadless"
+    "test:ci": "ng test --no-watch --browsers=ChromeHeadless",
+    "test:cov": "ng test --no-watch --code-coverage --browsers=ChromeHeadless",
+    "format": "npx prettier --write ."
   },
   "private": true,
   "dependencies": {
