exclude migrations from code cov

--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -78,7 +78,10 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!**/migrations/**",
+      "!**/app.module.ts",
+      "!**/main.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
