--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -7,6 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --no-watch --browsers=ChromeHeadless",
+    "test:cov": "ng test --no-watch --code-coverage --browsers=ChromeHeadless",
     "format": "npx prettier --write ."
   },
   "private": true,
