--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -36,6 +36,8 @@
     "@nestjs/swagger": "^6.0.3",
     "@nestjs/typeorm": "^9.0.0",
     "config": "^3.3.7",
+    "keycloak-connect": "^18.0.2",
+    "nest-keycloak-connect": "^1.9.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -43,6 +45,7 @@
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@golevelup/nestjs-testing": "^0.1.2",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
