added unit tests for application_status service and controller

--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -80,7 +80,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s",
       "!**/migrations/**",
-      "!**/app.module.ts",
+      "!**/*.module.ts",
       "!**/main.ts"
     ],
     "coverageDirectory": "../coverage",
