added unit tests to application service

--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -81,7 +81,8 @@
       "**/*.(t|j)s",
       "!**/migrations/**",
       "!**/*.module.ts",
-      "!**/main.ts"
+      "!**/main.ts",
+      "!**/mockTypes.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
