--- a/alcs-api/docker-compose.yml
+++ b/alcs-api/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - '5432:5432'
     volumes:
       - postgres:/var/lib/postgres
+    networks: 
+      - backend
   keycloak:
     image: quay.io/keycloak/keycloak:legacy
     environment:
@@ -24,7 +26,14 @@ services:
       KEYCLOAK_PASSWORD: Pa55w0rd
     ports:
       - "8081:8080"
+    networks: 
+      - alcs
     depends_on:
       - db
 volumes:
   postgres:
+
+networks: 
+  backend: 
+    name: alcs 
+    driver: bridge
