Application, ApplicationStatus API (#13)
* exclude migrations from code cov

* added application and application-status

* added unit tests for application_status service and controller

* added application controller tests

* added unit tests to application service

* test cleanup

* added default application status

* fix keycloak dependency

* pr comments

* docker db-admin

--- a/alcs-api/docker-compose.yml
+++ b/alcs-api/docker-compose.yml
@@ -11,11 +11,26 @@ services:
       - '5432:5432'
     volumes:
       - postgres:/var/lib/postgres
+    networks: 
+      - alcs
+  db-admin:
+    image: postgres:14.4-bullseye
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+    ports:
+      - '5431:5432'
+    volumes:
+      - postgres:/var/lib/postgres
+    networks: 
+      - alcs
   keycloak:
     image: quay.io/keycloak/keycloak:legacy
     environment:
       DB_VENDOR: POSTGRES
-      DB_ADDR: db
+      DB_ADDR: db-admin
       DB_DATABASE: postgres
       DB_USER: postgres
       DB_SCHEMA: public
@@ -24,7 +39,14 @@ services:
       KEYCLOAK_PASSWORD: Pa55w0rd
     ports:
       - "8081:8080"
+    networks: 
+      - alcs
     depends_on:
-      - postgres
+      - db-admin
 volumes:
   postgres:
+
+networks: 
+  alcs: 
+    name: alcs 
+    driver: bridge
