--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -83,8 +83,9 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s",
       "!**/migrations/**",
-      "!**/app.module.ts",
-      "!**/main.ts"
+      "!**/*.module.ts",
+      "!**/main.ts",
+      "!**/mockTypes.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
