--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -35,6 +35,8 @@
     "@nestjs/platform-fastify": "^9.0.3",
     "@nestjs/swagger": "^6.0.3",
     "@nestjs/typeorm": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "config": "^3.3.7",
     "keycloak-connect": "^18.0.2",
     "nest-keycloak-connect": "^1.9.0",
