--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-esm -d ./src/providers/typeorm/orm.config.ts",
+    "typeorm": "typeorm-ts-node-esm -d ./src/providers/typeorm/datasource.cli.orm.config.ts",
     "typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm -- migration:generate ./src/providers/typeorm/migrations/$npm_config_name",
     "migration:create": "npm run typeorm:cli migration:create ./src/providers/typeorm/migrations/$npm_config_name"
