--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -44,7 +44,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@golevelup/nestjs-testing": "^0.1.2",
