--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -41,7 +41,9 @@
     "config": "^3.3.7",
     "keycloak-connect": "^18.0.2",
     "nest-keycloak-connect": "^1.9.0",
+    "node-jose": "^2.1.1",
     "pg": "^8.7.3",
+    "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -58,6 +60,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
+    "@types/node-jose": "^1.1.10",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
