--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -41,6 +41,7 @@
     "config": "^3.3.7",
     "keycloak-connect": "^18.0.2",
     "nest-keycloak-connect": "^1.9.0",
+    "nestjs-cls": "^2.2.0",
     "node-jose": "^2.1.1",
     "pg": "^8.7.3",
     "redis": "^4.2.0",
