--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@bcgov/bc-sans": "^1.0.1",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
