--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.7",
+    "dayjs": "^1.11.4",
     "keycloak-connect": "^18.0.2",
     "nest-keycloak-connect": "^1.9.0",
     "nestjs-cls": "^2.2.0",
