Add Pino Logger
Change node to use Pino logger + configure it

--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -46,6 +46,7 @@
     "keycloak-connect": "^18.0.2",
     "nest-keycloak-connect": "^1.9.0",
     "nestjs-cls": "^2.2.0",
+    "nestjs-pino": "^3.1.1",
     "node-jose": "^2.1.1",
     "pg": "^8.7.3",
     "redis": "^4.2.0",
@@ -74,6 +75,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.2",
+    "pino-pretty": "^8.1.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
