--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -32,6 +32,7 @@
     "@fastify/helmet": "^9.1.0",
     "@fastify/static": "^6.4.0",
     "@nestjs/axios": "^0.1.0",
+    "@nestjs/bull": "^0.6.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -39,6 +40,7 @@
     "@nestjs/platform-fastify": "^9.0.3",
     "@nestjs/swagger": "^6.0.3",
     "@nestjs/typeorm": "^9.0.0",
+    "bull": "^4.8.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.7",
@@ -62,6 +64,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bull": "^3.15.9",
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
