--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -26,6 +26,7 @@
     "@bcgov/bc-sans": "^1.0.1",
     "@ng-select/ng-option-highlight": "^0.0.7",
     "@ng-select/ng-select": "^9.0.2",
+    "angular-mentions": "^1.5.0",
     "dayjs": "^1.11.4",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
