--- a/alcs-api/Dockerfile.migrate
+++ b/alcs-api/Dockerfile.migrate
@@ -11,8 +11,12 @@ COPY --chown=node:node package*.json ./
 
 RUN npm ci
 
+ARG environment=production
+
+ENV NODE_ENV ${environment}
+
 COPY --chown=node:node . .
 
 USER node
 
-CMD [ "npm", "run", "typeorm", "migration:run" ]
+CMD [ "npm", "run", "migration:run" ]
