--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -22,7 +22,8 @@
     "typeorm": "typeorm-ts-node-esm -d ./src/providers/typeorm/datasource.cli.orm.config.ts",
     "typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm -- migration:generate ./src/providers/typeorm/migrations/$npm_config_name",
-    "migration:create": "npm run typeorm:cli migration:create ./src/providers/typeorm/migrations/$npm_config_name"
+    "migration:create": "npm run typeorm:cli migration:create ./src/providers/typeorm/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm migration:run"
   },
   "dependencies": {
     "@automapper/classes": "^8.7.0",
