--- a/.github/workflows/schemaspy.yml
+++ b/.github/workflows/schemaspy.yml
@@ -4,12 +4,15 @@ on:
     branches:
       - main
 
+env:
+  NODE_ENV: test
+
 jobs:
   generate_schemaspy:
     runs-on: ubuntu-latest
 
     services:
-      db:
+      postgres:
         image: postgres
         env:
           POSTGRES_PASSWORD: postgres
