--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@bcgov/bc-sans": "^1.0.1",
+    "@matheo/datepicker": "^13.0.0-beta.1",
     "@ng-select/ng-option-highlight": "^0.0.7",
     "@ng-select/ng-select": "^9.0.2",
     "angular-mentions": "^1.5.0",
