--- a/alcs-frontend/Dockerfile
+++ b/alcs-frontend/Dockerfile
@@ -40,4 +40,4 @@ COPY --from=build /app/dist /usr/share/nginx/html
 
 # Dynamically update environment values
 # When the container starts, replace the settings.json with values from environment variables
-CMD ["/bin/sh",  "-c",  "envsubst < /usr/share/nginx/html/assets/settings.template.json > /usr/share/nginx/html/assets/settings.json && exec nginx -g 'daemon off;'"]
+CMD ["/bin/sh",  "-c",  "envsubst < /usr/share/nginx/html/assets/env.template.js > /usr/share/nginx/html/assets/env.js && exec nginx -g 'daemon off;'"]
