--- a/alcs-api/docker-compose.yml
+++ b/alcs-api/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.6'
 services:
   db:
-    image: postgres:14.4-bullseye
+    image: postgres:12.4
     restart: always
     environment:
       - POSTGRES_USER=postgres
