migrate from date to timestamptz

--- a/alcs-api/package.json
+++ b/alcs-api/package.json
@@ -9,10 +9,10 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "nest start TZ=UTC",
+    "start:dev": "nest start TZ=UTC --watch",
+    "start:debug": "nest start TZ=UTC --debug --watch",
+    "start:prod": "node dist/main TZ=UTC",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
