--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,10 +76,26 @@ services:
     links:
       - db
 
+  ################ S3 Storage ##############
+  minio:
+    image: minio/minio:latest
+    restart: always
+    command: "server --console-address :9001 --address :80 /data"
+    environment:
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=miniopassword
+      - MINIO_SERVER_URL=http://localhost
+
+    volumes:
+      - s3:/data
+    ports:
+      - "80:80"
+      - "9001:9001"
 
 volumes:
   postgres:
   redis:
+  s3:
 
 networks: 
   default:
