--- a/alcs-frontend/nginx.conf
+++ b/alcs-frontend/nginx.conf
@@ -1,6 +1,14 @@
 events {}
 
 http {
+    # Gzip
+    gzip on;
+    gzip_vary on; 
+    gzip_min_length 10240; 
+    gzip_proxied expired no-cache no-store private auth; 
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml; 
+    gzip_disable "MSIE [1-6]\.";
+
     include /etc/nginx/mime.types;
     server {
         listen 8081;
