--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: ${{ matrix.node }}
-      - run: npm install
+      - run: npm install --legacy-peer-deps
       - run: npm run build
       - run: npm run test:cov
       - if: matrix.node == '16'
