--- a/alcs-api/Dockerfile.migrate
+++ b/alcs-api/Dockerfile.migrate
@@ -1,13 +1,17 @@
-###################
-# BUILD FOR LOCAL DEVELOPMENT
-# https://www.tomray.dev/nestjs-docker-production
-###################
+#####################
+# DATABASE MIGRATION 
+#####################
 
 FROM node:16.15-alpine As development
 
-WORKDIR /usr/src/app
+WORKDIR /opt/app-root/
 
-COPY --chown=node:node package*.json ./
+# OpenShift fixes
+RUN chmod og+rwx /opt/app-root/ /var/run
+ENV NPM_CONFIG_USERCONFIG=/opt/app-root/.npmrc
+RUN npm config set cache $/opt/app-root/.npm
+
+COPY package*.json ./
 
 RUN npm ci
 
@@ -15,8 +19,6 @@ ARG environment=production
 
 ENV NODE_ENV ${environment}
 
-COPY --chown=node:node . .
+COPY . .
 
-USER node
-
-CMD [ "npm", "run", "migration:run" ]
+CMD [ "./migrate.sh" ]
