--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,18 +16,18 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}}}
 
-    - name: Build and push
+    - name: Build and push API
       uses: docker/build-push-action@v2
       with:
         context: alcs-api
         push: true
-        tags: ${{ github.actor }}/${{ env.API_IMAGE_NAME }}:${{ github.run_number }}
+        tags: ${{ github.actor }}/${{ env.API_IMAGE_NAME }}:${{ github.run_number }} ${{ github.actor }}/${{ env.API_IMAGE_NAME }}:latest
 
     # - name: Repository Dispatch
     #   uses: peter-evans/repository-dispatch@v1  
