--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}}}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and push API
       uses: docker/build-push-action@v2
