--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,17 +15,39 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Authenticate to OpenShift
-      run: |
-        oc login --token=${{ secrets.oc_token }} --server=${{ secrets.oc_server }}
-        docker login -u `oc whoami` -p `oc whoami --show-token` ${{ secrets.registry_url }}
+    - name: Lowercase repo owner
+      id: lowercase_repo_owner
+      uses: ASzc/change-string-case-action@v1
+      with:
+        string: ${{ github.repository_owner }}
 
-    - name: Build and push API
+    - name: Prepare labels and tags
+      id: prep
       run: |
-        IMAGE_NAME=${{ secrets.registry_url }}/${{ secrets.license-plate }}-tools/${{ env.API_IMAGE_NAME }}
-        docker build -t $IMAGE_NAME:${{ github.run_number }} alcs-api
-        docker push $IMAGE_NAME:${{ github.run_number }}
+        DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs
+        TAGS="${DOCKER_IMAGE}:${{ github.run_number }},${DOCKER_IMAGE}:latest"
+        echo ::set-output name=tags::${TAGS}
+        echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
 
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build and push alcs-api image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.prep.outputs.tags }}
+        labels: |
+          org.opencontainers.image.source=${{ github.event.repository.html_url }}
+          org.opencontainers.image.revision=${{ github.sha }}
 
     # - name: Repository Dispatch
     #   uses: peter-evans/repository-dispatch@v1  
