--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Authenticate to OpenShift
       run: |
         oc login --token=${{ secrets.oc_token }} --server=${{ secrets.oc_server }}
-        oc import-image $DOCKER_IMAGE:latest -n ${{secrets.license_plate}}-tools
+        oc import-image $DOCKER_IMAGE:latest -n ${{secrets.license_plate}}-tools --confirm
 
     # - name: Repository Dispatch
     #   uses: peter-evans/repository-dispatch@v1  
