--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -53,7 +53,7 @@ jobs:
       run: |
         DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-api
         oc login --token=${{ secrets.oc_token }} --server=${{ secrets.oc_server }}
-        oc import-image $DOCKER_IMAGE:latest -n ${{secrets.license_plate}}-tools --confirm
+        oc import-image $DOCKER_IMAGE:latest -n ${{secrets.license_plate}}-tools
 
     # - name: Repository Dispatch
     #   uses: peter-evans/repository-dispatch@v1  
