--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,66 +1,8 @@
-name: CI
-
+name: CD
 on:
   push:
     branches:
       - cicd
-env:
-  API_IMAGE_NAME: alcs-api
-  MIGRATE_IMAGE_NAME: alcs-migrate
-  FE_IMAGE_NAME: alcs-frontend
-  GITOPS_REPO: bcgov-c/tenant-gitops-a5cf88
-  
 jobs:
-  build-api:
-    runs-on: ubuntu-22.04
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Lowercase repo owner
-      id: lowercase_repo_owner
-      uses: ASzc/change-string-case-action@v1
-      with:
-        string: ${{ github.repository_owner }}
-
-    - name: Prepare labels and tags
-      id: prep
-      run: |
-        DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-api
-        TAGS="${DOCKER_IMAGE}:${{ github.run_number }},${DOCKER_IMAGE}:latest"
-        echo ::set-output name=tags::${TAGS}
-        echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Build and push alcs-api image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./alcs-api
-        push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.prep.outputs.tags }}
-        labels: |
-          org.opencontainers.image.source=${{ github.event.repository.html_url }}
-          org.opencontainers.image.revision=${{ github.sha }}
-
-    - name: Authenticate to OpenShift
-      run: |
-        DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-api
-        oc login --token=${{ secrets.oc_token }} --server=${{ secrets.oc_server }}
-        oc import-image alcs-api:latest -n ${{secrets.license_plate}}-tools
-        oc tag alcs-api:latest alcs-api:${{ github.run_number }} -n ${{secrets.license_plate}}-tools
-
-    # - name: Repository Dispatch
-    #   uses: peter-evans/repository-dispatch@v1  
-    #   with:
-    #     token: ${{ secrets.PAT }}
-    #     repository: ${{ env.gitops_repo }}
-    #     event-type: deploy-dev
-    #     client-payload: '{"apiImage": "image-registry.apps.silver.devops.gov.bc.ca/a5cf88-tools/alcs-api:latest"}'
+  build:
+    uses: ./.github/workflows/build.yml
