--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
     "@angular/material": "^14.0.5",
+    "@angular/material-moment-adapter": "^14.2.2",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
@@ -28,8 +29,8 @@
     "@ng-select/ng-option-highlight": "^0.0.7",
     "@ng-select/ng-select": "^9.0.2",
     "angular-mentions": "^1.5.0",
-    "dayjs": "^1.11.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
