--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,7 +120,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./alcs-api
-        file: Dockerfile.migrate
+        file: ./alcs-api/Dockerfile.migrate
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.prep.outputs.tags }}
         labels: |
