--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-api-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-api-
+
     - name: Build and push alcs-api image
       uses: docker/build-push-action@v2
       with:
@@ -77,6 +85,14 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-web-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-web-
+
     - name: Build and push alcs-api image
       uses: docker/build-push-action@v2
       with:
@@ -115,6 +131,14 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-migrate-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-migrate-
 
     - name: Build and push alcs-migrate image
       uses: docker/build-push-action@v2
