--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,10 +52,18 @@ jobs:
         context: ./alcs-api
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.prep.outputs.tags }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new
         labels: |
           org.opencontainers.image.source=${{ github.event.repository.html_url }}
           org.opencontainers.image.revision=${{ github.sha }}
-          
+    # Temp fix
+    # https://github.com/docker/build-push-action/issues/252
+    # https://github.com/moby/buildkit/issues/1896
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache 
   build-web:
     runs-on: ubuntu-22.04
     steps:
@@ -99,9 +107,15 @@ jobs:
         context: ./alcs-api
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.prep.outputs.tags }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new
         labels: |
           org.opencontainers.image.source=${{ github.event.repository.html_url }}
           org.opencontainers.image.revision=${{ github.sha }}
+    - name: Move cache
+      run: |
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache 
 
   build-migrate:
     runs-on: ubuntu-22.04
@@ -147,13 +161,13 @@ jobs:
         file: ./alcs-api/Dockerfile.migrate
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.prep.outputs.tags }}
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new
         labels: |
           org.opencontainers.image.source=${{ github.event.repository.html_url }}
           org.opencontainers.image.revision=${{ github.sha }}
-
-    - name: Authenticate to OpenShift
+    - name: Move cache
       run: |
-        DOCKER_IMAGE=ghcr.io/${{ steps.lowercase_repo_owner.outputs.lowercase }}/alcs-migrate
-        oc login --token=${{ secrets.oc_token }} --server=${{ secrets.oc_server }}
-        oc import-image alcs-migrate:latest -n ${{secrets.license_plate}}-tools
-        oc tag alcs-migrate:latest alcs-migrate:${{ github.run_number }} -n ${{secrets.license_plate}}-tools
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache 
+
