Force inherit secrets

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,8 +6,10 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/build.yml
+    secrets: inherit
   deploy:
     needs: build
     uses: ./.github/workflows/deploy.yml
     with:
       environment: dev
+    secrets: inherit
